# ChangeLog for gnome-extra/avant-window-navigator
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/avant-window-navigator/ChangeLog,v 1.2 2007/11/10 16:27:27 wltjr Exp $

*avant-window-navigator-0.2.1-r1 (10 Nov 2007)

  10 Nov 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  -avant-window-navigator-0.2.1.ebuild,
  +avant-window-navigator-0.2.1-r1.ebuild:
  Added missing dep, removed src_compile doesn't seem to be needed atm.

*avant-window-navigator-0.2.1 (09 Nov 2007)

  09 Nov 2007; William L. Thomson Jr. <wltjr@gentoo.org> +metadata.xml,
  +avant-window-navigator-0.2.1.ebuild:
  Initial ebuild, per bug# 165793
