@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST avant-window-navigator-0.2.1.tar 763942 RMD160 78a9b7675b0959e2ba0ebcf7e83e8013faa13989 SHA1 f3e42d543586a746f02b9bcd458d8813667f91d1 SHA256 7f611c692de9821e0244dfe5fa67864b734f4b0aeb5344231144b64da7bbcd98
-EBUILD avant-window-navigator-0.2.1-r1.ebuild 631 RMD160 bea2319108cb601b788ba4f77695b0b5bd357331 SHA1 fc4ef2f25c1ccae3bcba7a5a8dc61974c51069f5 SHA256 567fa80606ef4e798b3c3894893ea6c717b3607111f29ee181e492405003144a
-MISC ChangeLog 693 RMD160 f5fe839199e23a0b50c1d6906f1af63eef5ebdb2 SHA1 1efbd73d1bd4fcea3ee7a1f0e4d8bda61bf264d7 SHA256 999fd0ae3e43dab4c655043f3d73bdd74cd5a4de50c78d47e2d5983255138feb
+EBUILD avant-window-navigator-0.2.1-r1.ebuild 1020 RMD160 b6e674f22032817c1de76cc48efac399f6960596 SHA1 f28085049ebba0e7216341877a0d5a0a06c1df6b SHA256 185cbcadb2b854f444bf59bdae6b922faa9ff789e4e626542d9a0bd2cd05e498
+MISC ChangeLog 825 RMD160 2cd1c2751fd024e03e2a4cd0a827bc6a9b85199e SHA1 4f491aaca78adefd5d0f8bd1879479696dc1e331 SHA256 3b37c39abc703a1c9376d540b84d7000a0cde6d585a7e56d64ef8226c98ca934
 MISC metadata.xml 461 RMD160 bcbbe588a4d02236e0c8c3f353a64a81053460fe SHA1 c28c59c0e3f42a66522aa065ac3dd05bfde9abdd SHA256 932ccf503841a72f279f9d3e61bdde2db96d8c4251ca39f5d57156cb8b2380d3
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHuMTT1fmVwcYIWAYRAmUJAJoCneIAHLNsJZOqW/cMmNtyHF+JXACgxQNB
+xjGqt5jkXL2jrmtjFENbvpc=
+=uUVG
+-----END PGP SIGNATURE-----
