@@ -1,8 +1,8 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/avant-window-navigator/avant-window-navigator-0.2.1-r1.ebuild,v 1.1 2007/11/10 16:27:27 wltjr Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/avant-window-navigator/avant-window-navigator-0.2.1-r1.ebuild,v 1.2 2008/02/17 23:35:40 eva Exp $
 
-inherit gnome2
+inherit gnome2 python
 
 DESCRIPTION="Fully customisable dock-like window navigator for GNOME."
 HOMEPAGE="http://launchpad.net/awn"
@@ -18,3 +18,24 @@ DEPEND=">=dev-libs/glib-2.8
 	gnome-extra/gconf-editor
 	x11-libs/libwnck"
 RDEPEND="${DEPEND}"
+
+src_unpack() {
+	gnome2_src_unpack
+
+	# disable pyc compiling
+	mv py-compile py-compile.orig
+	ln -s $(type -P true) py-compile
+}
+
+pkg_postinst() {
+	gnome2_pkg_postinst
+	python_version
+	python_mod_optimize	/usr/$(get_libdir)/python${PYVER}/site-packages/awn
+}
+
+pkg_postrm() {
+	gnome2_pkg_postrm
+	python_version
+	python_mod_cleanup /usr/$(get_libdir)/python${PYVER}/site-packages/awn
+}
+
